[panama] adapt GeneralPosix java code to panama